--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,67 +8,50 @@ img {
     width: 150px;
     height: 150px;
 }
-
-a {
-    text-decoration: none;
-    color: black;
-}
-a:hover {
-    color: lightgray;
-}
-button {
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 4px;
-    padding: 10px;
-    box-shadow: 2px 2px 3px;
-    margin: 7px 3px;
-}
-button:hover {
-    cursor: pointer;
-}
 header {
     border-bottom: 3px double lightgray;
     text-align: center;
-}
-ul {
     display: flex;
-    justify-content: space-around;
-    list-style: none;
-}
-li {
-    font-size: 26px;
-    color: gray;
 }
 h1 {
     font-size: 42px;
-    margin: 0px;
-    text-align: center;
-    padding: 20px 0px;
 }
-form {
-    text-align: center;
-    margin: 10px;
-}
-label {
-    display: block;
-    width: 200px;
-    margin: auto;
-    font-size: 22px;
-}
-input,
-select {
-    width: 150px;
-    margin: 10px auto;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 20px;
-    box-shadow: 3px 3px 6px;
+span{
+    color:red;
+    margin-left: 10px;
 }
 
-.listItem {
-    text-align: center;
-    border-bottom: 4px double lightgray;
-    margin:40px auto;
-    width: 50%;
+.wrapper{
+    margin: auto;
+    width: 70%;
+}
+
+.form-wrapper{
+    margin: auto;
+    width:30%
+}
+
+.button {
+    margin:10px;
+}
+
+.navBarButtons{
+    margin-left: auto;
+    align-self: flex-end;
+}
+
+.gallery{
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+}
+
+.item-card{
+    margin: 10px;
+    width: 240px;
+}
+
+.detail-page{
+    display: flex;
+    
 }
